fix jumpy button

--- a/app/assets/stylesheets/layout.sass
+++ b/app/assets/stylesheets/layout.sass
@@ -10,9 +10,9 @@ $blue: #1837a0
 
 .list-button
   position: absolute
-  top: 1rem
-  right: -280px
-  z-index: 99
+  top: 21px
+  right: -276px
+  z-index: 4
 
 .has-js .list-alphabet
   transform: translateX(0)
